# collections

./: .cruft.json  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml
Bag/: index.html
Boolean/: index.html
CoItem/: index.html
Collection/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
Integer/: index.html
Item/: index.html
List/: index.html
ListItem/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
PositiveInteger/: index.html
Set/: index.html
String/: index.html
Thing/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
_index/: index.html
about/: index.html
collections/: index.html
element/: index.html
elementOf/: index.html
examples/: Item-001.yaml  README.md
firstItem/: index.html
firstItemOf/: index.html
followedBy/: index.html
item/: index.html
itemContent/: index.html
itemContentOf/: index.html
itemOf/: index.html
lastItem/: index.html
lastItemOf/: index.html
nextItem/: index.html
precededBy/: index.html
previousItem/: index.html
project/excel/: collections.xlsx
project/graphql/: collections.graphql
project/java/: Bag.java  CoItem.java  Collection.java  List.java  ListItem.java  Set.java  Thing.java
search/: search_index.json
size/: index.html
tests/: __init__.py  test_data.py
types/: index.html
(+13 files in other folders)
