[tool.poetry]
name = "collections"
version = "2.0.0"
description = "The Collections Ontology (CO)"
authors = ["Noel McLoughin <noel.mcloughlin@gmail.com>"]
license = "Apache Software License 2.0"
readme = "README.md"
include = ["README.md", "src/collections/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.4"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
cruft = "^2.12"
linkml = "^1.4"
linkml-datalog = "^0.2"
mkdocs-material = "^9.0"
mkdocs-mermaid2-plugin = "^0.6"
schemasheets = "^0.1"

[build-system]
requires = ["poetry-core>=1.5.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]
